--- a/code-server/1.0/settings.json
+++ b/code-server/1.0/settings.json
@@ -1,5 +1,6 @@
 {
     "workbench.colorTheme": "Monokai",
     "git.enableSmartCommit": true,
-    "git.confirmSync": false
+    "git.confirmSync": false,
+    "workbench.startupEditor": "none"
 }
